Added media page

--- a/career.html
+++ b/career.html
@@ -50,6 +50,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -270,11 +273,7 @@ function myFunction3() {
 }
 </script>
 
- <SCRIPT>
-  document.addEventListener("contextmenu", function(e){
-    e.preventDefault();
-}, false);
-    </SCRIPT>
+
     
 </body>
 
