--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Riverpay - About</title>
+  <title>Riverpay - Media</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/about.css" rel="stylesheet">
+  <link href="css/blog.css" rel="stylesheet">
   <link rel="icon" type="image/gif/png" href="img/logo.png">
 
 </head>
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html" style="color: #13AAE0;">About</a>
+            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
           </li>
           <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
@@ -51,7 +51,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
+            <a class="nav-link js-scroll-trigger" href="test.html" style="color: #13AAE0;">Media</a>
           </li>
         </ul>
       </div>
@@ -62,95 +62,18 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">About Us</div>
-        <div class="intro-heading">We bring Chinese marketing solutions to North American merchants.</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">RiverPay Blog</div>
+        <div class="intro-heading">Welcome to RiverPay's blog.</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Read Media</a>
       </div>
     </div>
   </header>
 
-  <!-- Services -->
-  <section id="services" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Who Are We</h2>
-          <h3 class="section-subheading text-muted">RiverPay is an integrated payment and marketing platform that connects Chinese consumers with tens of thousands of credible merchants in major markets all over the globe. As an authorized payment service provider of all leading mobile payment options including Alipay, WeChat Pay and UnionPay mobile application, RiverPay offers both technology solutions and settlement services to allow Chinese consumers to pay in CNY and merchants to receive in USD, CAD, EUR, GBP and many more.</h3>
-          <h3 class="section-subheadingg text-muted">RiverPay currently serves over 12,000 merchants across North America and Europe with clients including Saks Fifth Avenue, Hudson’s Bay, Selfridges, Holt Renfrew, Harry Rosen, Dilawri, Prada, Tiffany and Co, De Beers, MaxMara and more. The company supports both in-store transactions and online e-commerce / m-commerce.</h3>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <img src="img/about/alipay2.PNG" style="max-width: 95%;">
-          </span>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <img src="img/about/wechat.png" style="max-width: 95%;">
-          </span>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <img src="img/about/unionpay.png" style="max-width: 75%;">
-          </span>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section id="services">
+    <div id="dib-categories"></div>
 
-  <!-- Portfolio Grid -->
-  <section id="portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Fast Facts</h2>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <img src="img/about/abt_icon1.png">
-          </span>
-          <p class="text-muted">Incorporated in March 2017 with co-founders from high-technology and investment backgrounds.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/about/abt_icon2.png">
-            </span>
-          <p class="text-muted">Presence in 18 countries spanning North America, Europe and Asia.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/about/abt_icon3.png">
-            </span>
-          <p class="text-muted">Licensed by all leading payment platforms from China, including Alipay, WeChat Pay, and China UnionPay.</p>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/about/abt_icon4.png">
-            </span>
-          <p class="text-muted">Patent pending integration technology with 80%+ of mainstream POS and ERP systems.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/about/abt_icon5.png">
-            </span>
-          <p class="text-muted">Fully compliant payment services with FINCEN, FINTRAC, EMI registered (USD, CAD, EUR, GBP licensed).</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/about/abt_icon6.png">
-            </span>
-          <p class="text-muted">Backed by top investors worldwide, including Marathon Venture Partners, DHVC, Extreme Venture Partner, Trilead Capital, among others</p>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block;">
-  </section>
+    <div id="dib-posts"></div>
+     </section>
 
   <!-- Contact -->
   <section id="contact">
@@ -223,6 +146,17 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
+
+    <script type="text/javascript">
+        var dib_id = '0DLRM3YW97U5FWSBG586';
+    </script>
+    <script src="https://dropinblog.com/js/embed.js"></script>
+
+    <script type="text/javascript">
+        var dib_id = '0DLRM3YW97U5FWSBG586';
+        var dib_recent_post_list = 3;
+        </script>
+    <script src="https://dropinblog.com/js/embed.js"></script>
 
 </body>
 
