--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -413,7 +416,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Our Clients</h2>
-          <h3 class="section-subheading text-muted">Join a growing list of world renowned brands that have recognized the power of RiverPay.</h3>
+          <h3 class="section-subheading text-muted" style="text-align: center;">Join a growing list of world renowned brands that have recognized the power of RiverPay.</h3>
         </div>
       </div>
       <div class="row">
