--- a/service.html
+++ b/service.html
@@ -50,6 +50,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -270,11 +273,7 @@
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
 
-  <SCRIPT>
-    document.addEventListener("contextmenu", function(e){
-      e.preventDefault();
-  }, false);
-      </SCRIPT>
+
 
 </body>
 
