--- a/career.html
+++ b/career.html
@@ -5,10 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Browse the vacancies we are currently recruiting to find a great fit; we are growing our teams in the United States, Canada and China">
   <meta name="author" content="">
+  <meta name="keywords" content="riverpay, jobs, roles, positions, vacancies, talents, recruitment, human resources, team development">
 
-  <title>Riverpay - Career</title>
+  <title>RiverPay is always looking for new talents to expand our team</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,14 +46,15 @@
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html" style="color: #13AAE0;">Career</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contact.html">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
-          </li>
+
         </ul>
       </div>
     </div>
