--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Contact RiverPay to meet your business needs through safe and convenient payment solutions as well as seize the huge purchase potential of Chinese consumers">
   <meta name="author" content="">
+  <meta name="keywords" content="riverpay, canada, usa, china, Mississauga, toronto, ontario, fremont, california, shanghai">
 
-  <title>Riverpay - About</title>
+  <title>Contact RiverPay</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,16 +40,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html" style="color: #13AAE0;">About</a>
+            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
           </li>
           <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="contact.html" style="color: #13AAE0;">Contact</a>
           </li>
         </ul>
       </div>
