--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="An Alipay and WeChat Pay authorized fintech company that offers payment solutions and settlement services to connect global merchants with Chinese consumers">
   <meta name="author" content="">
+  <meta name="keywords" content="riverpay, alipay, wechat pay, unionpay, mobile payment, alipay global, Alipay international, online payment, fintech, citcon, snappay motion pay, motionpay, ott, ottpay">
 
-  <title>RiverPayment Home</title>
+  <title>AliPay & WeChat Pay authorized payment provider | RiverPay</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,13 +46,13 @@
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
+            <a class="nav-link js-scroll-trigger" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
