--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="RiverPay serves over 12,000 merchants in 18 countries across North America, Europe and Asia, offering fully compliant payment and settlement services">
   <meta name="author" content="">
+  <meta name="keywords" content="payments, e-commerce, m-commerce, payment processing, payment gateway, alipay, alipay global, alipay international, wechat pay, unionPay, chinese consumers, saks fifth avenue, hudson’s bay, selfridges, holt renfrew, harry rosen, prada, tiffany">
 
-  <title>Riverpay - About</title>
+  <title>An integrated payments and marketing platform | RiverPay</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,13 +46,13 @@
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="media.html">Services</a>
+        </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
           </li>
         </ul>
       </div>
