--- a/media.html
+++ b/media.html
@@ -5,10 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Learn what is happening about RiverPay and recent dynamics of the payment sector and vertical industries like retail, hospitality, tourism and others">
   <meta name="author" content="">
+  <meta name="keywords" content="riverpay, payments, e-commerce, m-commerce, alipay, wechat pay, unionPay, retail, hospitality, tourism, food and beverage">
 
-  <title>Riverpay - Media</title>
+  <title>Latest news about RiverPay and the payment industry</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,14 +46,15 @@
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="media.html" style="color: #13AAE0;">Media</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="test.html" style="color: #13AAE0;">Media</a>
-          </li>
+ 
         </ul>
       </div>
     </div>
