--- a/service.html
+++ b/service.html
@@ -5,10 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="One-stop payment and settlement solutions compatible with 80%+ POS and ERP systems for retailers, shopping malls, luxury brands, hotels, travel agencies, etc">
   <meta name="author" content="">
+  <meta name="keywords" content="payments, settlements, e-commerce, m-commerce, in-store payment, alipay, wechat pay, unionpay, alipay global, alipay integration, wechat pay integration, pos integration, pos machine, payment processing, payment gateway, qr code, gift card, retail, retailer, hospitality, hotel, tourism, travel agency">
 
-  <title>Riverpay - Services</title>
+  <title>In-store, e-commerce and m-commerce payment solutions | RiverPay</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,13 +46,13 @@
               <a class="nav-link js-scroll-trigger" href="service.html" style="color: #13AAE0;">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="test.html">Media</a>
           </li>
         </ul>
       </div>
