Added more info to Service
Also updated info to better match what is on requirement sheet

--- a/career.html
+++ b/career.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/logos/rplogo.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -83,18 +83,21 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <button id="button" onclick="myFunction1()" style="border: none; background-color: white;"><img src="img/Career/canada.png" style="max-width: 100%;"></button>
+            <button id="button" onclick="myFunction1()" style="border: none; background-color: white;">
+              <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/Career/canada.png"></button>
           </span>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-             <button id="button" onclick="myFunction2()" style="border: none; background-color: white;"><img src="img/Career/america.png" style="max-width: 100%"></button>
+             <button id="button" onclick="myFunction2()" style="border: none; background-color: white;">
+              <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/Career/america.png"></button>
             </span>
           
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <button id="button" onclick="myFunction3()" style="border: none; background-color: white;"><img src="img/Career/china.png" style="max-width: 100%"></button>
+              <button id="button" onclick="myFunction3()" style="border: none; background-color: white;">
+                <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/Career/china.png"></button>
             </span>
           
         </div>
