--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/logos/rplogo.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -46,7 +46,7 @@
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="media.html">Services</a>
+            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
         </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
