--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/logos/rplogo.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -145,10 +145,10 @@
           <h3><strong>Customer Support</strong></h3>
           <br>
           <br>
-          <p class="small"><img src="img/contact/image%203.png" style="float: left; padding: 10px"><span><h6>Call us:</h6></span>
+          <p class="small"><img src="img/contact/image%203.png" style="float: left; padding: 10px; width: 50px;"><span><h6>Call us:</h6></span>
             <p>+1 (888) 875-4079</p>
           <br>
-          <img src="img/contact/image%204.png" style="float: left; padding: 10px"><span ><h6 style="margin-top: 4%">Email us:</h6></span>
+          <img src="img/contact/image%204.png" style="float: left; padding: 10px; width: 50px;"><span ><h6 style="margin-top: 4%;">Email us:</h6></span>
           info@riverpayment.com</p>
         </div>
       </div>
