--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logos/rplogo.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -63,8 +63,8 @@
   <header class="masthead" style="background-image: url('./img/bg.jpg');">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in" style="color: white">Grow your business through one billion Chinese consumers with</div>
-        <div class="intro-heading text-uppercase" style="color: #45aed6; font-size: xx-large"><img src="img/logos/rplogo.png"></div>
+        <div class="intro-lead-in" style="color: white">RiverPay helps merchants over the globe connect with Chinese consumers</div>
+        
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="#Intro">Tell Me More</a>
       </div>
     </div>
@@ -321,11 +321,11 @@
   </section> -->
 
   <!-- Team -->
- <!-- <section class="bg-light" id="team">
+ <!-- <section class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+          <h2 class="section-heading text-uppercase">Why RiverPay</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
@@ -417,7 +417,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Our Clients</h2>
-          <h3 class="section-subheading text-muted" style="text-align: center;">Join a growing list of world renowned brands that have recognized the power of RiverPay.</h3>
+          <h3 class="section-subheading text-muted" style="text-align: center;">Join the world’s top shopping malls, retailers, luxury brands, education groups, travel agencies and e-commerce businesses in adopting RiverPay’s fast and safe payment gateway.</h3>
         </div>
       </div>
       <div class="row">
@@ -520,50 +520,7 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading" style="color: white;">Feel free to contact us with anything related to our products/services. We’ll respond as soon as possible.</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
+ 
 
   <!-- Footer -->
   <footer>
