--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/logos/rplogo.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -201,6 +201,133 @@
            <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
          </div>
   </section> -->
+
+  <section class="bg-light" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Money Flow</h2>
+          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-image">
+               <!-- <img class="rounded-circle img-fluid" src="img/Service/0.png" alt=""> -->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Day 0:</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Transaction occurs</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <!-- <img class="rounded-circle img-fluid" src="img/Service/1.png" alt="">-->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Day 1:</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Alipay / Wechat Pay settles RMB and converts to USD/CAD/EUR/GBP/other currencies and disburses to RiverPay</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <!-- <img class="rounded-circle img-fluid" src="img/Service/2.png" alt="">-->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Day 2:</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">RiverPay receives USD/CAD/EUR/GBP/other currencies and settles to merchants</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <!-- <img class="rounded-circle img-fluid" src="img/Service/3.png" alt=""> -->
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Day 3:</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Merchant receives fund</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section id="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Who Should Use Us</h2>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <img class="img-fluid" src="img/Service/Food.png">
+          </span>
+          <h4 class="service-heading">Food & Beverage</h4>
+          <p class="text-muted">RiverPay allows you to accept the favorite payment choices of Chinese travelers and locals while dining or shopping.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+              <img class="img-fluid" src="img/Service/Retail.png">
+            </span>
+            <h4 class="service-heading">Retail Merchant</h4>
+          <p class="text-muted">Our spot-checkout system is available both standalone and integrated seamlessly into your existing POS flow.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+              <img class="img-fluid" src="img/Service/Travel.png">
+            </span>
+            <h4 class="service-heading">Travel Agency</h4>
+          <p class="text-muted">RiverPay operates at some of the iconic travel service providers to offer you favorable experiences. Enable travelers to go with brands they trust.</p>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+              <img class="img-fluid" src="img/Service/Hotel.png">
+            </span>
+            <h4 class="service-heading">Hotel & Hospitality</h4>
+          <p class="text-muted">RiverPay takes great pride in warmly welcoming tourists and guests to enjoy their comfortable stays and all facilities and services of quality.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+              <img class="img-fluid" src="img/Service/Education.png">
+            </span>
+            <h4 class="service-heading">Educational Institution</h4>
+          <p class="text-muted">RiverPay works with schools, colleges, and campus organizers, to help simplify the payment process for Chinese students fresh-off-the-boat.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+              <img class="img-fluid" src="img/Service/Ecommerce.png">
+            </span>
+            <h4 class="service-heading">E-commerce</h4>
+          <p class="text-muted">RiverPay allows you to complete the checkout process on your website, mobile site, or mobile app seamlessly using the payment methods Chinese consumers most familiar with.</p>
+        </div>
+      </div>
+    </div>
+    <hr>
+  </section>
 
   <!-- Footer -->
   <footer>
